--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -70,6 +70,35 @@
 	<build>
 		<plugins>
 			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>2.0.5</version>
+				<dependencies>
+					<dependency>
+						<groupId>postgresql</groupId>
+						<artifactId>postgresql</artifactId>
+						<version>${postgresql.driver.version}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<promptOnNonLocalDatabase>false</promptOnNonLocalDatabase>
+					<driver>org.postgresql.Driver</driver>
+					<url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
+					<username>${testing.db.login}</username>
+					<password>${testing.db.password}</password>
+					<changeLogFile>${main.sql}/com/hellblazer/CoRE/schema/ruleform/animations.xml</changeLogFile>
+					<verbose>false</verbose>
+				</configuration>
+				<executions>
+					<execution>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>update</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
 				<groupId>com.hellblazer</groupId>
 				<artifactId>pljava-loader</artifactId>
 				<version>0.0.1-SNAPSHOT</version>
@@ -127,6 +156,23 @@
 										</versionRange>
 										<goals>
 											<goal>load</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<ignore></ignore>
+									</action>
+								</pluginExecution>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>org.liquibase</groupId>
+										<artifactId>
+											liquibase-maven-plugin
+										</artifactId>
+										<versionRange>
+											[2.0.5,)
+										</versionRange>
+										<goals>
+											<goal>update</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
