--- a/model/pom.xml
+++ b/model/pom.xml
@@ -118,7 +118,7 @@
 					<url>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</url>
 					<username>${testing.db.login}</username>
 					<password>${testing.db.password}</password>
-					<changeLogFile>${main.sql}/com/hellblazer/CoRE/schema/core650-0.0.1.xml</changeLogFile>
+					<changeLogFile>${main.sql}/com/hellblazer/CoRE/schema/core650.xml</changeLogFile>
 					<verbose>false</verbose>
 				</configuration>
 				<executions>
