--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -24,11 +24,6 @@
 			<version>0.9.6</version>
 		</dependency>
 		<dependency>
-			<groupId>com.hellblazer.CoRE</groupId>
-			<artifactId>core</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
-		</dependency>
-		<dependency>
 			<groupId>com.yammer.dropwizard</groupId>
 			<artifactId>dropwizard-auth</artifactId>
 			<version>0.5.1</version>
@@ -58,6 +53,11 @@
 			<artifactId>model</artifactId>
 			<type>test-jar</type>
 			<scope>test</scope>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.hellblazer.CoRE</groupId>
+			<artifactId>configuration</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
