CollectionResourceTest that doesn't work and isn't annotated

--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -65,5 +65,15 @@
 			<artifactId>commons-beanutils</artifactId>
 			<version>1.8.3</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hellblazer.CoRE</groupId>
+			<artifactId>test-framework</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.2-1003-jdbc4</version>
+		</dependency>
 	</dependencies>
 </project>
