--- a/service/pom.xml
+++ b/service/pom.xml
@@ -31,6 +31,12 @@
 			<groupId>com.hellblazer.CoRE</groupId>
 			<artifactId>data-access</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>javax.persistence</artifactId>
+					<groupId>org.eclipse.persistence</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>com.yammer.dropwizard</groupId>
@@ -69,6 +75,11 @@
 							</excludes>
 						</filter>
 					</filters>
+					<artifactSet>
+						<excludes>
+							<exclude>classworlds:classworlds</exclude>
+						</excludes>
+					</artifactSet>
 				</configuration>
 				<executions>
 					<execution>
