--- a/model/pom.xml
+++ b/model/pom.xml
@@ -53,7 +53,6 @@
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
 			<version>1.0.7</version>
-			<scope>test</scope>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-api</artifactId>
@@ -73,10 +72,21 @@
 			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.apache.openjpa</groupId>
+            <artifactId>openjpa</artifactId>
+            <version>2.2.2</version>
+            <type>jar</type>
+        </dependency>
 		<dependency>
-			<groupId>org.apache.openjpa</groupId>
-			<artifactId>openjpa-all</artifactId>
-			<version>2.2.0</version>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>jul-to-slf4j</artifactId>
+			<version>1.7.5</version>
 		</dependency>
 	</dependencies>
 
@@ -157,9 +167,16 @@
 								<openjpa.metamodel>TRUE</openjpa.metamodel>
 							</options>
 							<outputDirectory>${project.build.directory}/generated-sources/jpa</outputDirectory>
-						</configuration>
-					</execution>
+						</configuration> 
+					</execution> 
 				</executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.apache.openjpa</groupId>
+                        <artifactId>openjpa-all</artifactId>
+                        <version>2.2.2</version>
+                    </dependency>
+                </dependencies>
 			</plugin>
 			<!-- Disable annotation processors during normal compilation -->
 			<plugin>
@@ -199,7 +216,7 @@
 					<dependency>
 						<groupId>org.apache.openjpa</groupId>
 						<artifactId>openjpa-all</artifactId>
-						<version>2.2.1</version>
+						<version>2.2.2</version>
 					</dependency>
 				</dependencies>
 			</plugin>
