More work on the stored procedure use of JPA.  Ensure the eternal transaction has been started upon initialization.  Flush entity manager when exiting the stored procedure.  Change java stored procedure model to use a closure to ensure pre/post conditions rather than replicating code.  Clean up pom dependencies.  Eliminate open jpa modified code.

--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -52,22 +52,15 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId>
-			<version>1.0.7</version>
-			<scope>test</scope>
-			<exclusions>
-				<exclusion>
-					<artifactId>slf4j-api</artifactId>
-					<groupId>org.slf4j</groupId>
-				</exclusion>
-			</exclusions>
-		</dependency>
-		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>${postgresql.driver.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.5</version>
 		</dependency>
 	</dependencies>
 	<build>
