--- a/model/pom.xml
+++ b/model/pom.xml
@@ -59,6 +59,7 @@
 					<groupId>org.slf4j</groupId>
 				</exclusion>
 			</exclusions>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>postgresql</groupId>
