--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -57,6 +57,11 @@
 			<artifactId>slf4j-jdk14</artifactId>
 			<version>1.7.5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hellblazer</groupId>
+			<artifactId>pljava-api</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
