--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.hellblazer.CoRE</groupId>
 	<artifactId>CoRE.app</artifactId>
@@ -38,9 +39,8 @@
 		<module>configuration</module>
 		<module>data-access</module>
 		<module>service</module>
-		<module>order-processing-example</module>
-    
-  </modules>
+
+	</modules>
 
 	<dependencyManagement>
 		<dependencies>
@@ -61,10 +61,10 @@
 			<id>eclipselink</id>
 			<url>http://www.eclipse.org/downloads/download.php?r=1&amp;nf=1&amp;file=/rt/eclipselink/maven.repo/</url>
 		</repository>
-        <repository>
-            <id>hellblazer-snapshots</id>
-            <url>https://repository-hal900000.forge.cloudbees.com/snapshot/</url>
-        </repository>
+		<repository>
+			<id>hellblazer-snapshots</id>
+			<url>https://repository-hal900000.forge.cloudbees.com/snapshot/</url>
+		</repository>
 	</repositories>
 
 	<pluginRepositories>
