--- a/model/pom.xml
+++ b/model/pom.xml
@@ -22,17 +22,14 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-annotations</artifactId>
-			<version>2.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
-			<version>2.1.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.hellblazer.CoRE</groupId>
 			<artifactId>test-framework</artifactId>
-			<version>0.0.2-SNAPSHOT</version>
 			<scope>test</scope>
 			<exclusions>
 				<exclusion>
@@ -52,7 +49,6 @@
 		<dependency>
 			<groupId>ch.qos.logback</groupId>
 			<artifactId>logback-classic</artifactId>
-			<version>1.0.7</version>
 			<exclusions>
 				<exclusion>
 					<artifactId>slf4j-api</artifactId>
@@ -64,35 +60,29 @@
 		<dependency>
 			<groupId>postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>${postgresql.driver.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.10</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.openjpa</groupId>
 			<artifactId>openjpa-all</artifactId>
-			<version>2.2.2</version>
 			<type>jar</type>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>jul-to-slf4j</artifactId>
-			<version>1.7.5</version>
 		</dependency>
 		<dependency>
 			<groupId>com.fasterxml.uuid</groupId>
 			<artifactId>java-uuid-generator</artifactId>
-			<version>3.1.3</version>
 		</dependency>
 	</dependencies>
 
@@ -120,7 +110,6 @@
 			<plugin>
 				<groupId>org.liquibase</groupId>
 				<artifactId>liquibase-maven-plugin</artifactId>
-				<version>2.0.5</version>
 				<dependencies>
 					<dependency>
 						<groupId>postgresql</groupId>
@@ -204,7 +193,6 @@
 			<plugin>
 				<groupId>org.apache.openjpa</groupId>
 				<artifactId>openjpa-maven-plugin</artifactId>
-				<version>2.2.2</version>
 				<configuration>
 					<addDefaultConstructor>true</addDefaultConstructor>
 					<enforcePropertyRestrictions>true</enforcePropertyRestrictions>
@@ -222,7 +210,6 @@
 					<dependency>
 						<groupId>org.apache.openjpa</groupId>
 						<artifactId>openjpa-all</artifactId>
-						<version>2.2.2</version>
 					</dependency>
 				</dependencies>
 			</plugin>
@@ -245,14 +232,6 @@
 			<plugin>
 				<groupId>com.hellblazer</groupId>
 				<artifactId>pljava-loader</artifactId>
-				<version>0.0.1-SNAPSHOT</version>
-				<dependencies>
-					<dependency>
-						<groupId>postgresql</groupId>
-						<artifactId>postgresql</artifactId>
-						<version>${postgresql.driver.version}</version>
-					</dependency>
-				</dependencies>
 				<configuration>
 					<jdbcUrl>jdbc:postgresql://${testing.db.server}:${testing.db.port}/core</jdbcUrl>
 					<username>${testing.db.login}</username>
@@ -263,14 +242,12 @@
 						<resource>
 							<groupId>org.slf4j</groupId>
 							<artifactId>slf4j-jdk14</artifactId>
-							<version>1.7.2</version>
 						</resource>
 					</additional>
 					<excluded>
 						<resource>
 							<groupId>org.apache.openjpa</groupId>
 							<artifactId>openjpa-all</artifactId>
-							<version>2.2.2</version>
 							<type>jar</type>
 						</resource>
 					</excluded>
@@ -288,7 +265,6 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>sql-maven-plugin</artifactId>
-				<version>1.5</version>
 				<dependencies>
 					<dependency>
 						<groupId>postgresql</groupId>
@@ -445,9 +421,7 @@
 										<artifactId>
 											liquibase-maven-plugin
 										</artifactId>
-										<versionRange>
-											[2.0.5,)
-										</versionRange>
+										<versionRange>[2.0.4,)</versionRange>
 										<goals>
 											<goal>update</goal>
 										</goals>
