--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,7 @@
 			<dependency>
 				<groupId>ch.qos.logback</groupId>
 				<artifactId>logback-classic</artifactId>
-				<version>1.0.7</version>
-				<exclusions>
-					<exclusion>
-						<artifactId>slf4j-api</artifactId>
-						<groupId>org.slf4j</groupId>
-					</exclusion>
-				</exclusions>
-				<scope>test</scope>
+				<version>1.0.10</version>
 			</dependency>
 			<dependency>
 				<groupId>postgresql</groupId>
@@ -248,6 +241,13 @@
 					<groupId>com.hellblazer</groupId>
 					<artifactId>pljava-loader</artifactId>
 					<version>0.0.1-SNAPSHOT</version>
+					<dependencies>
+						<dependency>
+							<groupId>org.postgresql</groupId>
+							<artifactId>postgresql</artifactId>
+							<version>9.2-1003-jdbc4</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 				<plugin>
 					<groupId>org.liquibase</groupId>
@@ -343,6 +343,17 @@
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-shade-plugin</artifactId>
 					<version>2.1</version>
+				</plugin>
+				<plugin>
+					<groupId>org.bsc.maven</groupId>
+					<artifactId>maven-processor-plugin</artifactId>
+					<dependencies>
+						<dependency>
+							<groupId>org.apache.openjpa</groupId>
+							<artifactId>openjpa-all</artifactId>
+							<version>2.2.2</version>
+						</dependency>
+					</dependencies>
 				</plugin>
 			</plugins>
 		</pluginManagement>
