--- a/service/pom.xml
+++ b/service/pom.xml
@@ -21,6 +21,12 @@
 			<groupId>com.hellblazer.CoRE</groupId>
 			<artifactId>animations</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-jdk14</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.reflections</groupId>
