--- a/test-framework/pom.xml
+++ b/test-framework/pom.xml
@@ -12,6 +12,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId> 
+			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.eclipse.persistence</groupId>
