Iterating on a lot of access authorization query stuff. This is all going to have to be changed later but for now, we'll go with it.

--- a/workspace-api/pom.xml
+++ b/workspace-api/pom.xml
@@ -16,6 +16,11 @@
 			<artifactId>model</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.hellblazer.CoRE</groupId>
+			<artifactId>animations</artifactId>
+			<version>0.0.2-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 </project>
