--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 		<logging.core>INFO</logging.core>
 		<logging.consoleLayoutPattern>[%-6r] %-5p [%c{3}] : %m%n</logging.consoleLayoutPattern>
 		<testing.logging.core>INFO</testing.logging.core>
+        <testing.logging.jpa>WARN</testing.logging.jpa>
 		<testing.logging.org.apache>TRACE</testing.logging.org.apache>
 		<testing.logging.dbunit>WARN</testing.logging.dbunit>
 		<testing.logging.consoleLayoutPattern>[%-6r] %-5p [%c{3}] : %m%n</testing.logging.consoleLayoutPattern>
