--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -76,6 +76,12 @@
 			<groupId>com.hellblazer.CoRE</groupId>
 			<artifactId>animations</artifactId>
 			<version>${project.version}</version>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-jdk14</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 </project>
