--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -50,10 +50,6 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-jdk14</artifactId>
-		</dependency>
-		<dependency>
 			<groupId>com.hellblazer</groupId>
 			<artifactId>pljava-api</artifactId>
 		</dependency>
@@ -71,6 +67,11 @@
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<classifier>site</classifier>
+		</dependency>
+		<dependency>
+			<groupId>ch.qos.logback</groupId>
+			<artifactId>logback-classic</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
