--- a/animations/src/main/resources/com/hellblazer/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/hellblazer/CoRE/jsp/jpa.properties
@@ -1,3 +1,5 @@
 openjpa.ConnectionURL=jdbc:default:connection
 openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
+#openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
+#openjpa.jdbc.DBDictionary=postgres(bitTypeName="BIT")
