--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 		<logging.core>INFO</logging.core>
 		<logging.consoleLayoutPattern>[%-6r] %-5p [%c{3}] : %m%n</logging.consoleLayoutPattern>
 		<testing.logging.core>INFO</testing.logging.core>
-        <testing.logging.jpa>WARN</testing.logging.jpa>
+		<testing.logging.jpa>WARN</testing.logging.jpa>
 		<testing.logging.org.apache>TRACE</testing.logging.org.apache>
 		<testing.logging.dbunit>WARN</testing.logging.dbunit>
 		<testing.logging.consoleLayoutPattern>[%-6r] %-5p [%c{3}] : %m%n</testing.logging.consoleLayoutPattern>
@@ -173,6 +173,11 @@
 				<groupId>org.postgresql</groupId>
 				<artifactId>postgresql</artifactId>
 				<version>9.2-1003-jdbc4</version>
+			</dependency>
+			<dependency>
+				<groupId>org.slf4j</groupId>
+				<artifactId>log4j-over-slf4j</artifactId>
+				<version>1.7.5</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -366,4 +371,16 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<dependencies>
+		<dependency>
+			<groupId>com.fasterxml.uuid</groupId>
+			<artifactId>java-uuid-generator</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>log4j</artifactId>
+					<groupId>log4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+	</dependencies>
 </project>
