Fuck yea.  Fix goddamned boolean type translation problem with OpenJPA in Java Stored Procedures.  Job attribute copydown working.

--- a/animations/src/main/resources/com/hellblazer/CoRE/jsp/jpa.properties
+++ b/animations/src/main/resources/com/hellblazer/CoRE/jsp/jpa.properties
@@ -1,5 +1,5 @@
 openjpa.ConnectionURL=jdbc:default:connection
 openjpa.ConnectionDriverName=org.postgresql.pljava.jdbc.SPIDriver
 openjpa.ConnectionFactoryProperties=PrettyPrint=true, PrettyPrintLineLength=80, PrintParameters=true
+<property name="openjpa.jdbc.DBDictionary" value="postgres(StoreCharsAsNumbers=false)"/>
 #openjpa.Log=DefaultLevel=TRACE,SQL=TRACE
-#openjpa.jdbc.DBDictionary=postgres(bitTypeName="BIT")
