New PolymorphicMixin generator. Not hooked up to anything yet, but it's there.

--- a/model/pom.xml
+++ b/model/pom.xml
@@ -81,6 +81,15 @@
 			<groupId>com.fasterxml.uuid</groupId>
 			<artifactId>java-uuid-generator</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.antlr</groupId>
+			<artifactId>stringtemplate</artifactId>
+			<version>4.0.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.reflections</groupId>
+			<artifactId>reflections</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
