Separate out json serialization in prep for generating polymorphic mixin.  Create separate project for the plugin to do generation.

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,8 @@
 		<module>data-access</module>
 		<module>service</module>
 		<module>job-queue</module>
+		<module>mixin-generator</module>
+		<module>json</module>
 	</modules>
 
 	<dependencyManagement>
