Polymorphic mixin plugin

--- a/json/pom.xml
+++ b/json/pom.xml
@@ -28,7 +28,7 @@
 	</dependencies>
 
 	<build>
-		<!-- <plugins>
+		<plugins>
 			<plugin>
 				<groupId>com.hellblazer.CoRE</groupId>
 				<artifactId>mixin-generator</artifactId>
@@ -40,7 +40,7 @@
 				</configuration>
 				<executions>
 					<execution>
-						<id>generate</id>
+						<id>mixin-generator</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
@@ -48,7 +48,7 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins> -->
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
@@ -73,6 +73,7 @@
 										</versionRange>
 										<goals>
 											<goal>generate</goal>
+											<goal>mixin-generator</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
