--- a/json/pom.xml
+++ b/json/pom.xml
@@ -25,22 +25,28 @@
 			<artifactId>test-framework</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.mojo</groupId>
+			<artifactId>build-helper-maven-plugin</artifactId>
+			<version>1.8</version>
+			<type>maven-plugin</type>
+		</dependency>
 	</dependencies>
 
 	<build>
-		<!-- <plugins>
+		<plugins>
 			<plugin>
 				<groupId>com.hellblazer.CoRE</groupId>
 				<artifactId>mixin-generator</artifactId>
 				<version>0.0.2-SNAPSHOT</version>
 				<configuration>
-					<outputDirectory>${project.build.directory}/generated-sources</outputDirectory>
+					<outputDirectory>${project.build.directory}/generated-sources/mixin</outputDirectory>
 					<packageName>com.hellblazer.CoRE.json</packageName>
 					<className>PolymorphicRuleformMixin</className>
 				</configuration>
 				<executions>
 					<execution>
-						<id>generate</id>
+						<id>mixin-generator</id>
 						<goals>
 							<goal>generate</goal>
 						</goals>
@@ -48,7 +54,27 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins> -->
+			<plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>1.8</version>
+        <executions>
+          <execution>
+            <id>add-source</id>
+            <phase>generate-sources</phase>
+            <goals>
+              <goal>add-source</goal>
+            </goals>
+            <configuration>
+              <sources>
+                <source>target/generated-sources/mixin</source>
+                
+              </sources>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+		</plugins>
 		<pluginManagement>
 			<plugins>
 				<!--This plugin's configuration is used to store Eclipse m2e settings 
@@ -73,6 +99,7 @@
 										</versionRange>
 										<goals>
 											<goal>generate</goal>
+											<goal>mixin-generator</goal>
 										</goals>
 									</pluginExecutionFilter>
 									<action>
