--- a/data-access/pom.xml
+++ b/data-access/pom.xml
@@ -84,6 +84,13 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+            <groupId>com.hellblazer.CoRE</groupId>
+            <artifactId>animations</artifactId>
+            <type>test-jar</type>
+            <scope>test</scope>
+            <version>${project.version}</version>
+        </dependency>
+		<dependency>
 			<groupId>com.hellblazer.CoRE</groupId>
 			<artifactId>json</artifactId>
 			<version>0.0.2-SNAPSHOT</version>
