--- a/model/pom.xml
+++ b/model/pom.xml
@@ -92,6 +92,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>build-helper-maven-plugin</artifactId>
+				<version>1.8</version>
 				<executions>
 					<execution>
 						<id>add-source</id>
@@ -154,6 +155,7 @@
 			<plugin>
 				<groupId>org.bsc.maven</groupId>
 				<artifactId>maven-processor-plugin</artifactId>
+				<version>2.2.4</version>
 				<executions>
 					<execution>
 						<id>process</id>
