--- a/animations/pom.xml
+++ b/animations/pom.xml
@@ -73,6 +73,11 @@
 			<artifactId>logback-classic</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
